[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit Voice Agent with Agno Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.4.7",
    "livekit-agents[deepgram,openai,silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.0.0",
]

